--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 plugins:
   - jekyll-feed
-title: Casey Fitzpatrick's blog
-description: My personal blog and project feed
+title: Casey Fitzpatrick
+description: Personal blog and project feed
 author: Casey Fitzpatrick
