--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -11,5 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install
+      uses: pandoc/actions/setup@{main}
+      with:
+        version: 2.19
+    
     - name: Build Site
       run: make
