--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,22 +1,27 @@
-name: Makefile CI
+name: Build and Deploy Pages
 
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-
-    - name: Install Pandoc
-      uses: pandoc/actions/setup@v1
-
+    
     - name: Build Site
+      uses: r-lib/actions/setup-pandoc@v2
       run: make
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
 
     - name: Upload site
       uses: actions/upload-pages-artifact@v3
