--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: r-lib/actions/setup-pandoc@v2
     
     - name: Build Site
-      uses: r-lib/actions/setup-pandoc@v2
       run: make
 
     - name: Setup Pages
